--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -3574,6 +3574,10 @@ eval "$(atuin init bash)"
              #:hash "0x10qjhcym4nnv5zh4nwy7d46lp158q06w2iwgi265nl1bz9s7yq")))
   (pkg "emacs-agent-shell"))
 #+end_src
+** gemini
+#+begin_src scheme :noweb-ref guix-pkg
+"google-gemini-cli"
+#+end_src
 * COMMENT emacs screencast recording
 #+begin_src elisp :tangle packages.el
 (package! command-log-mode :pin "af600e6b4129c8115f464af576505ea8e789db27")
