--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -178,16 +178,10 @@
   (inherit config)
   ;; prevent guix gc deleting build inputs
   (privileged? #f)
-  (substitute-urls (cons*
-                    "https://substitutes.nonguix.org"
-                    (guix-configuration-substitute-urls config)))
-  (authorized-keys (cons*
-                    <<cfg-nonguix-pub()>>
-                    (guix-configuration-authorized-keys config)))
   (extra-options '("--gc-keep-derivations"
                    "--gc-keep-outputs"))))
 #+end_src
-** guix
+** nonguix
 #+name: cfg-nonguix-pub
 #+begin_src cfg :wrap src text
 (public-key (ecc (curve Ed25519) (q #C1FD53E5D4CE971933EC50C9F307AE2171A2D3B52C804642A7A35F84F3A4EA98#)))
@@ -200,6 +194,13 @@
 "(public-key (ecc (curve Ed25519) (q #C1FD53E5D4CE971933EC50C9F307AE2171A2D3B52C804642A7A35F84F3A4EA98#)))")
 #+end_src
 
+#+begin_src scheme :noweb-ref system-service
+(simple-service
+ 'nonguix guix-service-type
+ (guix-extension
+   (substitute-urls (list "https://substitutes.nonguix.org"))
+   (authorized-keys (list <<cfg-nonguix-pub()>>))))
+#+end_src
 ** networking
 #+begin_src scheme :noweb-ref system-use
 (gnu services ssh)
@@ -2124,7 +2125,10 @@ wireplumber.profiles = {
 "  }\n"
 "}"))
 #+end_src
-
+** COMMENT smartcard
+#+begin_src scheme :noweb-ref system-service
+(service (@ (gnu services security-token) pcscd-service-type))
+#+end_src
 * guix-emacs helper
 #+begin_src elisp
 (defun use-guix-package (pkg-name)
